Updated configs for deployment